Fix dropmenu z-index: default to 1, hero override to 901

--- a/_sass/components/_dropmenu.scss
+++ b/_sass/components/_dropmenu.scss
@@ -34,7 +34,7 @@
   &-menu {
     display: none;
     position: absolute;
-    z-index: 900;
+    z-index: 1;
     min-width: var(--_dropmenu-min-width);
     margin-top: var(--_dropmenu-offset);
     padding: var(--_menu-padding);
