--- a/_sass/components/_hero.scss
+++ b/_sass/components/_hero.scss
@@ -129,6 +129,11 @@
         }
     }
 
+    // ── Hero Drop Menus ──
+    .nds-dropmenu-menu {
+        z-index: 901;
+    }
+
     // ── Mobile ──
 
     @include mobile {
